# bazel2zephyr

./: .gitignore  README.md
Step1/: BUILD  WORKSPACE  calculationMachine.cc
Step2/: CMakeLists.txt
Step2/lib/: calculationMachine.hh
Step2/src/: main.cpp
